--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
 
       - name: Build
         run: bun run build
+        env:
+          VITE_APPWRITE_API_URL: ${{ vars.VITE_APPWRITE_API_URL }}
+          VITE_APPWRITE_PROJECT_ID: ${{ vars.VITE_APPWRITE_PROJECT_ID }}
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
